# UCMuon

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  INSTALL.md  LICENSE  Makefile  README.md  ROADMAP.md  THIRD_PARTY_LICENSES.md  install.ps1  install_windows.bat  requirements.txt  run_gui.bat  run_gui.sh  setup.sh
.streamlit/: config.toml
benchmark/: README.md
benchmark/analysis/: README.md  analyze_output.py  analyze_realistic_bench.py  analyze_sixcode.py  (+6 more)
benchmark/codes/geant4/: CMakeLists.txt  MuonRock.cc  README.md  run.mac  run_ecomug.mac  run_file.mac  run_powerlaw.mac  vis.mac
benchmark/codes/geant4/include/: ActionInitialization.hh  DetectorConstruction.hh  EcoMug_NOTICE.txt  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SimConfig.hh  SteppingAction.hh
benchmark/codes/geant4/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
docs/: ENGINE6_USAGE_GUIDE.md  MUSIC_FILES.md  release_check_v1.0_2026-07-06.md
gui/: fast_flux_estimator.py  gui_csg_engine.py  gui_csg_transport.py  gui_density_analysis.py  gui_geometry_engine.py  gui_mcs_estimator.py  gui_source_optimizer.py  gui_stochastic_engine.py  gui_terrain_engine.py  proposal_driver.py  ucmuon_backward_mc.py  ucmuon_bb_driver.py  ucmuon_dasrem_driver.py  ucmuon_density_analysis.py  ucmuon_gui.py  ucmuon_pumas_driver.py  ucmuon_stochastic_driver.py  ucmuon_terrain_driver.py
hpc/: README_HPC.md  run_proposal_bench.sh  run_ucmuon_gen.sh  run_ucmuon_transport.sh
tools/: compare_engines.py
(+94 files in other folders)
